# tiny_agi

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  configure-glfw.bat  configure-pico.bat  tinyagi.c  workspace.code-workspace
agi/: CMakeLists.txt  actions.h  interpreter.c  platform_support.h  state.h  text_display.c  text_display.h  vol.c  vol.h
agi/commands/: control_flow.c  display.c  flag.c  inventory_item.c  menu_io.c  object_view.c  picture.c  sound.c  string.c  test.c
agi/include/: agi.h
agi/src/: CMakeLists.txt  actions.h  constants.h  decryption.c  decryption.h  heap.c  heap.h  input_queue.c  input_queue.h  interpreter.c  menu.c  menu.h  platform_support.h  sound.c  sound.h  state.c  state.h  support.c  text_display.c  text_display.h  text_parser.c  text_parser.h  view.c  view.h  vol.c  vol.h
agi/src/commands/: control_flow.c  debugging.c  display.c  inventory_item.c  math.c  menu_io.c  object_view.c  picture.c  sound.c  string.c  system.c  test.c
tinyagi-glfw/: CMakeLists.txt  CMakeSettings.json  agi_sound.c  agi_sound.h  font.c  panic.h  peep.h  savegame  synth.c  synth.h  tinyagi.c  waveout.c  waveout.h  winmm_audio.c  winmm_audio.h
tinyagi-pico/: CMakeLists.txt  CMakeSettings.json  archive.h  main.c  upload-archive.bat  video_first.pio
tinyagi-pico/agi_sound_player/: agi_sound.c  agi_sound.h  sound21.h  sound60.h  sound69.h
tinyagi-pico/audio/: pwm_synth.c  pwm_synth.h  rawraw.h  sine_wave.h  strings.h  wilco.h
tinyagi-pico/vga/: vga.c  vga.h
