add_library (tinyagi OBJECT
	"actions.h"
	"interpreter.c"
	"platform_support.h" 
	"state.c" 
	"state.h" 
	"text_display.c" 
	"text_display.h" 
	"vol.c"
	"vol.h"
	"view.c" 
	"view.h"
	"constants.h"
	"commands/control_flow.c"
	"commands/debugging.c"
	"commands/display.c"
	"commands/flag.c"
	"commands/inventory_item.c"
	"commands/math.c"
	"commands/menu_io.c"
	"commands/object_view.c"
	"commands/picture.c"
	"commands/sound.c"
	"commands/string.c"
	"commands/system.c"
	"commands/test.c"  )